tests/error/result_errors/result_tag_not_str.py
from guppylang.std.builtins import result
from tests.util import compile_guppy


@compile_guppy
def foo(x: int) -> None:
    result((), x)
