tests/error/result_errors/result_tag_not_str.err
Error: Type mismatch (at $FILE:7:11)
  | 
5 | @compile_guppy
6 | def foo(x: int) -> None:
7 |     result((), x)
  |            ^^ Expected expression of type `str`, got `()`

Guppy compilation failed due to 1 previous error
